--- a/GigApi.Api/appsettings.json
+++ b/GigApi.Api/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "ConnectionStrings": {
+    "GigDb": "Data Source=DESKTOP-AFGJHGV\\SQLEXPRESS;Initial Catalog=Gig;Integrated Security=True"
+  },
+  "JwtSettings": {
+    "Secret": "cCsbjLIHHjY2EzL4nYoInzqLj3VifnEI"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
