--- a/GigApi.Persistence/GigApi.Persistence.csproj
+++ b/GigApi.Persistence/GigApi.Persistence.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\GigApi.Application\GigApi.Application.csproj" />
     <ProjectReference Include="..\GigApi.Domain\GigApi.Domain.csproj" />
   </ItemGroup>
 
