--- a/GigApi.Api/appsettings.json
+++ b/GigApi.Api/appsettings.json
@@ -3,7 +3,8 @@
     "GigDb": "Data Source=DESKTOP-AFGJHGV\\SQLEXPRESS;Initial Catalog=Gig;Integrated Security=True"
   },
   "JwtSettings": {
-    "Secret": "cCsbjLIHHjY2EzL4nYoInzqLj3VifnEI"
+    "Secret": "cCsbjLIHHjY2EzL4nYoInzqLj3VifnEI",
+    "TokenLifeTime":  "00:00:45"
   },
   "Logging": {
     "LogLevel": {
